# mron-launcher

./: .gitignore  LICENSE  README.md  bun.lockb  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts
.github/workflows/: main.yml
app/: globals.css  layout.tsx  page.tsx
app/settings/: page.tsx
src/: App.tsx  LauncherPage.tsx  Layout.tsx  SettingsPage.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  cache  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/main/: toc1.dcache
src-tauri/src/: lib.rs
src/app/: main.tsx
src/app/layouts/: BaseLayout.tsx
src/components/: Counter.tsx  HandleButton.tsx  Header.tsx  Install.tsx  Launcher.tsx  Play.tsx
src/components/common/: Header.tsx
src/components/launcher/: HandleButton.tsx  Install.tsx  Launcher.tsx  Play.tsx
src/components/settings/: HandleSettings.tsx  Header.tsx  PlayerName.tsx  Settings.tsx
src/components/ui/: toast.tsx  toaster.tsx
src/entities/install/lib/: installMronLatest.ts
src/entities/main/model/: launcherSlice.ts
src/features/install/ui/: Install.tsx
src/features/play/ui/: Play.tsx
src/features/settings/ui/: Settings.tsx
src/handlers/: store.ts
src/pages/main/ui/: Page.tsx  globals.css
src/pages/main/ui/HandleLauncher/: HandleLauncher.tsx
src/shared/utils/: updater.ts
src/state/: store.ts
src/state/counter/: counterSlice.ts
src/state/launcher/: launcherSlice.ts
~/.tauri/: myapp.key  myapp.key.pub
