[package]
name = "app"
version = "0.1.0"
description = "MRON Launcher"
authors = ["awalki"]
license = "Apache-2.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.1", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2"
zip = "2.2.0"
tauri-plugin-http = "2"
tauri-plugin-upload = "2.0.1"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
